Thu Apr 21 09:04:32 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* DAnCE/examples/Hello/descriptors/TestNodeManagerMap.dat
	* DAnCE/examples/Hello/descriptors/run_test.pl
	
	Added a NodeManagerMap specific to the test and changed the ports
	that the node managers invoked by the test listen on to avoid
	test failures.
	
Wed Apr 20 16:14:26 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* docs/schema/CIAOServerResources.xsd

	Fixed syntax and semantic errors.
	
Wed Apr 20 12:43:53 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * DAnCE/examples/Hello/descriptors/run_test.pl: 

          Not all the test platforms has CIAO_ROOT environment variable
          defined. Changed that dependency to ACE_ROOT in the script.

Wed Apr 20 13:11:28 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantSourceGenerator.cpp:
        
          Added full scoping to a generated method call on 
          Servant_Impl_Base, to eliminate a warning from the
          Borland compiler.

Wed Apr 20 13:05:23 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp
	* DAnCE/RepositoryManager/Update_Plan.cpp
	
	Fixed compile errors in Borland. 
	
Wed Apr 20 08:09:17 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	* DAnCE/ciao/Servant_Impl_T.cpp

	Fixed a compile error with emulated exceptions. 
	
Wed Apr 20 08:03:23 2005 CDT  Will Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/DP_Handler.cpp
	
	Silenced some compile errors in VC6.
	
Tue Apr 19 23:41:02 2005 CDT  Will Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/XML_File_Intf.cpp

          Silenced some compile errors in VC6.

Tue Apr 19 16:46:00 2005 CDT  Gan Deng  <dengg@dre.vanderbilt.edu>

	* CIAO-INSTALL.html

          Fixed this page to direct people where to download CIDLC.

Tue Apr 19 17:33:55 2005  Nanbor Wang  <nanbor@tesla.txcorp.com>

	* docs/schema/ServerResourceUsage.txt: